<resources>
    <string name="app_name">NavigationDrawerSample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tools">Tools</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="send">Sent Messages</string>
    <string name="received" translatable="false">Received</string>
    <string name="sent" translatable="false">Send new message</string>
    <string name="unread" translatable="false">Not read</string>
    <string name="spam" translatable="false">Junk</string>
    <string name="bin" translatable="false">Bin</string>


</resources>
